; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/gx/extr_main.c_Reset_cb.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/gx/extr_main.c_Reset_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@system_hw = common dso_local global i32 0, align 4
@SYSTEM_MD = common dso_local global i32 0, align 4
@SYSTEM_SMS = common dso_local global i32 0, align 4
@IO_RESET_HI = common dso_local global i32 0, align 4
@io_reg = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @Reset_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Reset_cb() #0 {
  %1 = load i32, i32* @system_hw, align 4
  %2 = load i32, i32* @SYSTEM_MD, align 4
  %3 = and i32 %1, %2
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 @gen_reset(i32 0)
  br label %19

7:                                                ; preds = %0
  %8 = load i32, i32* @system_hw, align 4
  %9 = load i32, i32* @SYSTEM_SMS, align 4
  %10 = icmp eq i32 %8, %9
  br i1 %10, label %11, label %18

11:                                               ; preds = %7
  %12 = load i32, i32* @IO_RESET_HI, align 4
  %13 = xor i32 %12, -1
  %14 = load i32*, i32** @io_reg, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 13
  %16 = load i32, i32* %15, align 4
  %17 = and i32 %16, %13
  store i32 %17, i32* %15, align 4
  br label %18

18:                                               ; preds = %11, %7
  br label %19

19:                                               ; preds = %18, %5
  ret void
}

declare dso_local i32 @gen_reset(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
